updating requirements to use v2016-04-06.0 of OULibraries.d7

--- a/requirements.yml
+++ b/requirements.yml
@@ -5,7 +5,7 @@
   name: OULibraries.centos7
 # fetch OULibraries.d7 from github
 - src: https://github.com/OULibraries/ansible-role-d7
-  version: master
+  version: v2016-04-06.0
   name: OULibraries.d7
 # fetch OULibraries.ngrok from github
 - src: https://github.com/OULibraries/ansible-role-ngrok
