Add mariadb server to vagrant.
Maria db will no longer be installed as part of the OULibraries.d7 role, so we need to move it in to the vagrant role. We're also specifying the dev branch of that role that removes the DB install.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,13 +1,17 @@
 ---
-# fetch OULibraries.centos7 from github
+
 - src: https://github.com/OULibraries/ansible-role-centos7
   version: master
   name: OULibraries.centos7
-# fetch OULibraries.d7 from github
+
+- src: https://github.com/OULibraries/ansible-role-mariadb
+  name: OULibraries.mariadb
+  version: master       
+
 - src: https://github.com/OULibraries/ansible-role-d7
-  version: master
   name: OULibraries.d7
-# fetch OULibraries.ngrok from github
+  version: origin/dev-removedb
+
 - src: https://github.com/OULibraries/ansible-role-ngrok
   version: master
   name: OULibraries.ngrok
