Specify version for all ansible role dependencies.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 # fetch OULibraries.centos7 from github
 - src: https://github.com/OULibraries/ansible-role-centos7
-  version: master
+  version: v2016-04-08.0
   name: OULibraries.centos7
 # fetch OULibraries.d7 from github
 - src: https://github.com/OULibraries/ansible-role-d7
@@ -9,5 +9,5 @@
   name: OULibraries.d7
 # fetch OULibraries.ngrok from github
 - src: https://github.com/OULibraries/ansible-role-ngrok
-  version: master
+  version: v2016-04-08.0
   name: OULibraries.ngrok
