Add vagrant user to apache group so g=rwx is meaningful.

--- a/vagrant.yml
+++ b/vagrant.yml
@@ -11,10 +11,20 @@
     - OULibraries.mariadb
     - OULibraries.d7
     - OULibraries.ngrok
+
   tasks:
     - name: Disable selinux for vagrant
       selinux: state=disabled
     - name: Add apache user to vagrant group
-      command: usermod -a -G vagrant apache
+      user:
+        name: apache
+        append: yes
+        groups: vagrant
+    - name: Add vagrant user to apache group
+      user:
+        name: vagrant
+        append: yes
+        groups: apache
+
   post_tasks:
     - include: vagrant-post-tasks.yml
