--- a/vagrant-post-tasks.yml
+++ b/vagrant-post-tasks.yml
@@ -7,6 +7,7 @@
   register: apache_group
 - name: Unmount /srv
   mount: name=/srv fstype=vboxsf src=srv  state=unmounted
+  when: environment_name == "vagrant"
 - name: Mount srv to /srv with the right permissions
   mount:
     name: /srv
@@ -14,3 +15,4 @@
     src: srv
     opts: "uid={{apache_user.stdout}},gid={{apache_group.stdout}},dmode=775,fmode=664"
     state: mounted
+  when: environment_name == "vagrant"
