--- a/vagrant.yml
+++ b/vagrant.yml
@@ -13,8 +13,16 @@
     - OULibraries.ngrok
 
   tasks:
-    - name: Disable selinux for vagrant
-      selinux: state=disabled
+    - name: Enable selinux for testing
+      selinux:
+        state: enforcing
+        policy: targeted
+      when: environment_name != "vagrant"
+    - name: Disable selinux for vagrant dev
+      selinux:
+        state: disabled
+      when: environment_name == "vagrant"
+
     - name: Add apache user to vagrant group
       user:
         name: apache
