--- a/requirements.yml
+++ b/requirements.yml
@@ -9,7 +9,7 @@
   name: OULibraries.mariadb
 
 - src: https://github.com/OULibraries/ansible-role-d7
-  version: origin/dev-removedb
+  version: v2016-04-15.0
   name: OULibraries.d7
 
 - src: https://github.com/OULibraries/ansible-role-ngrok
