--- a/vagrant.yml
+++ b/vagrant.yml
@@ -1,11 +1,12 @@
 ---
-- hosts: default
+- hosts: localhost
   sudo: yes
   vars_files:
     - my-vars.yml
   pre_tasks:
     - name: /srv is a directory
       file: path=/srv state=directory mode=0755 force=yes
+
   roles:
     - OULibraries.centos7
     - OULibraries.mariadb
@@ -33,3 +34,7 @@
         name: vagrant
         append: yes
         groups: apache
+
+
+
+        
