--- a/vagrant.yml
+++ b/vagrant.yml
@@ -7,6 +7,11 @@
     - name: /srv is a directory
       file: path=/srv state=directory mode=0755 force=yes
 
+    - name: Check preconditions for running playbook. 
+      assert:
+        that:
+          - mariadb_root_pass is defined
+
   roles:
     - OULibraries.centos7
     - OULibraries.mariadb
