Add support for new users role to requirements.yml

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,10 @@
 ---
 - src: https://github.com/OULibraries/ansible-role-centos7
-  version: v2016-04-18.1
+  version: v2016-04-25.0
   name: OULibraries.centos7
 
 - src: https://github.com/OULibraries/ansible-role-apache2
-  version: v2016-04-18.0
+  version: v2016-04-25.0
   name: OULibraries.apache2
 
 - src: https://github.com/OULibraries/ansible-role-mariadb
@@ -12,9 +12,13 @@
   name: OULibraries.mariadb
 
 - src: https://github.com/OULibraries/ansible-role-d7
-  version: v2016-04-22.0
+  version: v2016-04-15.0
   name: OULibraries.d7
 
 - src: https://github.com/OULibraries/ansible-role-ngrok
   version: v2016-04-08.0
   name: OULibraries.ngrok
+
+- src: https://github.com/OULibraries/ansible-role-users
+  version: v2016-04-25.0
+  name: OULibraries.users
