--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Ignore ansible roles in the vagrant directory
 roles/
 
+# Ignore ansible retries
+*.retry
+
 # Ignore vagrant build files
 .vagrant
 
 # Ignore vagrant downloads files
 downloads/
-
-# Ignore ansible_local downloaded roles 
-roles/
 
 # Ignore linked keys
 libdev_rsa
