--- a/vagrant.yml
+++ b/vagrant.yml
@@ -21,6 +21,7 @@
     - name: Disable selinux for vagrant dev
       selinux:
         state: permissive
+        policy: targeted
       when: environment_name == "vagrant"
 
     - name: Add apache user to vagrant group
